--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -35,6 +35,7 @@
         {{ page.title }}
       </h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <a href="/" class="btn">Home</a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
