Separating the examples in their own pages

--- a/docs/_includes/menus/documentation.html
+++ b/docs/_includes/menus/documentation.html
@@ -1,4 +1,4 @@
-<div class="documentation-menu">
+<div class="custom-menu documentation-menu">
 	<div><a href="/documentation/setup/">Setup</a></div>
 
 	<div><a href="/documentation/inputs/">Inputs</a></div>
