--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,7 +23,7 @@
 			<a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
 			<a href="/documentation/setup/" class="btn">Documentation</a>
 			<a href="/changelog/" class="btn">Changelog</a>
-			<a href="/examples/" class="btn">Examples</a>
+			<a href="/examples/countries/" class="btn">Examples</a>
 		</header>
 
 		<main id="content" class="main-content" role="main">
