Highlighting the current menu item

--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -17,6 +17,11 @@
     border-width: 1px;
     border-radius: 0.3rem;
     transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+
+    &.custom-menu-active {
+      color: $body-link-color;
+      background-color: $border-color;
+    }
   }
 }
 
