--- a/docs/_includes/menus/documentation.html
+++ b/docs/_includes/menus/documentation.html
@@ -11,3 +11,12 @@
 
 	<div><a href="/documentation/outputs/">Outputs</a></div>
 </div>
+
+<script type="text/javascript">
+	window.addEventListener('load', function () {
+		currentLinks = document.querySelectorAll('.documentation-menu a[href="' + window.location.pathname + '"]');
+		currentLinks.forEach(function (link) {
+			link.parentNode.classList.add('custom-menu-active');
+		});
+	});
+</script>
