--- a/docs/_includes/menus/examples.html
+++ b/docs/_includes/menus/examples.html
@@ -7,3 +7,12 @@
 
 	<div><a href="/examples/zip-codes-tokyo/">Tokyo's zip-codes API</a></div>
 </div>
+
+<script type="text/javascript">
+	window.addEventListener('load', function () {
+		currentLinks = document.querySelectorAll('.examples-menu a[href="' + window.location.pathname + '"]');
+		currentLinks.forEach(function (link) {
+			link.parentNode.classList.add('custom-menu-active');
+		});
+	});
+</script>
