--- a/docs/_includes/menus/examples.html
+++ b/docs/_includes/menus/examples.html
@@ -1,11 +1,11 @@
 <div class="custom-menu examples-menu">
-	<div><a href="/examples/countries/">Countries API</a></div>
+	<div><a href="/examples/countries">Countries API</a></div>
 
-	<div><a href="/examples/people/">People API</a></div>
+	<div><a href="/examples/people">People API</a></div>
 
-	<div><a href="/examples/japanese-dictionary/">Japanese dictionary API</a></div>
+	<div><a href="/examples/japanese-dictionary">Japanese dictionary API</a></div>
 
-	<div><a href="/examples/zip-codes-tokyo/">Tokyo's zip-codes API</a></div>
+	<div><a href="/examples/zip-codes-tokyo">Tokyo's zip-codes API</a></div>
 </div>
 
 <script type="text/javascript">
