--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,9 +21,9 @@
 			<h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 			<a href="/" class="btn">Home</a>
 			<a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
-			<a href="/documentation/setup/" class="btn">Documentation</a>
-			<a href="/changelog/" class="btn">Changelog</a>
-			<a href="/examples/countries/" class="btn">Examples</a>
+			<a href="/documentation/setup" class="btn">Documentation</a>
+			<a href="/changelog" class="btn">Changelog</a>
+			<a href="/examples/countries" class="btn">Examples</a>
 		</header>
 
 		<main id="content" class="main-content" role="main">
