--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -63,3 +63,10 @@ pre {
     padding: 0.5rem 0.4rem;
   }
 }
+
+iframe.schema-doc {
+  width: 100%;
+  height: 50vh;
+  border: 0;
+  overflow: hidden;
+}
