Changing the structure of the site and updating the links

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,11 +19,11 @@
 		<header class="page-header" role="banner">
 			<h1 class="project-name">{{ site.title | default: site.github.repository_name }} - {{ page.title }}</h1>
 			<h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-			<a href="/" class="btn">Home</a>
-			<a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
-			<a href="/documentation/setup" class="btn">Documentation</a>
-			<a href="/changelog" class="btn">Changelog</a>
+			<a href="/" class="btn">Get started</a>
 			<a href="/examples/countries" class="btn">Examples</a>
+			<a href="/configuration" class="btn">Configuration</a>
+			<a href="/changelog" class="btn">Changelog</a>
+			<a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
 		</header>
 
 		<main id="content" class="main-content" role="main">
