Removing the HTML schema from the website

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,7 @@
 			<h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 			<a href="/" class="btn">Get started</a>
 			<a href="/examples/countries" class="btn">Examples</a>
-			<a href="/configuration" class="btn">Configuration</a>
+			<a href="/configuration/inputs" class="btn">Configuration</a>
 			<a href="/changelog" class="btn">Changelog</a>
 			<a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
 		</header>
