Highlight the active main menu entry

--- a/docs/_includes/menus.html
+++ b/docs/_includes/menus.html
@@ -1,6 +1,10 @@
 <div class="custom-menu {{ include.menu.class }}">
 	{% for menu in include.menu.items %}
-		<div class="{%- if menu.href == page.url -%}custom-menu-active{%- endif -%}">
+		<div class="
+			{%- if menu.href == page.url -%}
+				custom-menu-active
+			{%- endif -%}
+		">
 			<a href="{{ menu.href }}">
 				{{ menu.title }}
 			</a>
