--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -95,3 +95,10 @@ h4 a,
 h5 a {
   color: $section-headings-color;
 }
+
+.page-header .btn.main-menu-link-active {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-color: rgba(255, 255, 255, 0.3);
+}
