--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -102,3 +102,8 @@ h5 a {
   background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.3);
 }
+
+time {
+  font-size: 0.75em;
+  color: $blockquote-text-color;
+}
